forth/test/fail/test_const_fold_redundant_is_aligned.af
use' ../../lang.af
fun: .test_const_fold_redundant_is_aligned { val -- out } val 1 .is_aligned_to end
